feat: created GetChatsByUserIdUseCase class
