# packages/shared/src/openapi.json
@@ -378,10 +378,10 @@
         }
       }
     },
-    "/ai/chat/{userId}": {
+    "/ai/chats/{userId}": {
       "get": {
         "summary": "Get AI response by UserId",
-        "description": "Retrieves previous chats by UserId",
+        "description": "Retrieves previous chat by UserId",
         "operationId": "getAIChatsByUserId",
         "tags": ["ai"],
         "security": [{ "bearerAuth": [] }],
